...

val CATEGORIES =
    listOf(
        Category("all", "All"),
        Category("movies", "Movies"),
        Category("tv", "TV"),
        Category("music", "Music"),
        Category("software", "Software"),
        Category("books", "Books"),
        Category("other", "Other"),
    )

