...
        glyph("chevron-down") {
            moveTo(4f, 6f)
            lineTo(8f, 10f)
            lineTo(12f, 6f)
        }

    val Remove =
        glyph("remove") {
            moveTo(4f, 4f)
            lineTo(12f, 12f)
            moveTo(12f, 4f)
            lineTo(4f, 12f)
        }
...
